@@ -1,19 +1,19 @@
 package fun.peri.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.awt.image.RenderedImage;
 import java.io.*;
+import java.util.Base64;
 
 public class Base64ConvertImage {
 
-    //图片转化成base64字符串
+    /**
+     * 图片转化成base64字符串
+     */
     public static String imageToBase64(String imgFile) {
         //将图片文件转化为字节数组字符串，并对其进行Base64编码处理
-        InputStream in = null;
+        InputStream in;
         byte[] data = null;
         //读取图片字节数组
         try {
@@ -25,20 +25,27 @@ public class Base64ConvertImage {
             e.printStackTrace();
         }
         //对字节数组Base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(data);//返回Base64编码过的字节数组字符串
+        Base64.Encoder encoder = Base64.getEncoder();
+        //返回Base64编码过的字节数组字符串
+        return encoder.encodeToString(data);
     }
 
-    //base64字符串转化成图片
-    public static boolean base64ToImage(String imgStr, String imgFilePath) {   //对字节数组字符串进行Base64解码并生成图片
-        if (imgStr == null) //图像数据为空
+    /**
+     * base64字符串转化成图片
+     */
+    public static boolean base64ToImage(String imgStr, String imgFilePath) {
+        //对字节数组字符串进行Base64解码并生成图片
+        //图像数据为空
+        if (imgStr == null) {
             return false;
-        BASE64Decoder decoder = new BASE64Decoder();
+        }
+        Base64.Decoder decoder = Base64.getDecoder();
         try {
             //Base64解码
-            byte[] b = decoder.decodeBuffer(imgStr);
+            byte[] b = decoder.decode(imgStr);
             for (int i = 0; i < b.length; ++i) {
-                if (b[i] < 0) {//调整异常数据
+                //调整异常数据
+                if (b[i] < 0) {
                     b[i] += 256;
                 }
             }
@@ -59,15 +66,15 @@ public class Base64ConvertImage {
      * @return
      */
     public static String imageToBase64(String imagePath, String imageType) {
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
         File f = new File(imagePath);
         BufferedImage bi;
         try {
             bi = ImageIO.read(f);
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            ImageIO.write(bi, imageType, baos);
-            byte[] bytes = baos.toByteArray();
-            return encoder.encodeBuffer(bytes).trim();
+            ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+            ImageIO.write(bi, imageType, byteArrayOutputStream);
+            byte[] bytes = byteArrayOutputStream.toByteArray();
+            return encoder.encodeToString(bytes).trim();
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -81,17 +88,17 @@ public class Base64ConvertImage {
      */
     public static boolean base64ToImage(String base64String, String toImagePath, String imageType) {
         try {
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] bytes1 = decoder.decodeBuffer(base64String);
+            Base64.Decoder decoder = Base64.getDecoder();
+            byte[] bytes1 = decoder.decode(base64String);
             ByteArrayInputStream bais = new ByteArrayInputStream(bytes1);
             RenderedImage bi1 = ImageIO.read(bais);
-            File w2 = new File(toImagePath);// 可以是jpg,png,gif格式
+            // 可以是jpg,png,gif格式
+            File w2 = new File(toImagePath);
             if (!w2.exists()) {
-                w2.createNewFile();
-                System.out.println("no exist=====");
+                System.out.println("can't find file:" + w2);
             }
-            System.out.println("pass...........");
-            return ImageIO.write(bi1, imageType, w2);// 不管输出什么格式图片，此处不需改动
+            // 不管输出什么格式图片，此处不需改动
+            return ImageIO.write(bi1, imageType, w2);
         } catch (IOException e) {
             e.printStackTrace();
             return false;
